--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,5 +4,6 @@
         <a href="{% link works.md %}">Works</a><br>
         <a href="{% link about.md %}">About</a><br>
         <a href="{% link links.md %}">Links</a><br>
+        <a href="{% link contact.md %}">Contact</a><br>
     </nav>
 </header>
