--- a/_sass/_variable.scss
+++ b/_sass/_variable.scss
@@ -1,10 +1,10 @@
 // Font
-@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital@0;1&family=Inconsolata&family=Playfair+Display&family=Playfair+Display+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&family=Inconsolata&family=Playfair+Display&family=Playfair+Display+SC&display=swap');
 
 // Variables
 $font-head-caps: 'Playfair Display SC', serif;
 $font-head-normal: 'Playfair Display', serif;
-$font-normal: 'Crimson Pro', serif;
+$font-normal: 'EB Garamond', serif;
 $font-mono: 'Inconsolata', monospace;
 
 $font-size-middle: 2.2rem; //1.7rem
