--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -92,3 +92,9 @@ figure {
     max-width: 100%;
     margin: 1em 0;
 }
+
+form {
+  font-family: $font-normal;
+  font-size: $font-size-small;
+  font-weight: normal;
+}
