--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -108,7 +108,8 @@ blockquote {
 
 code {
     font-family: $font-mono, monospace;
-    font-size: $font-size-small;
+    font-size: $font-size-footnote;
+    //font-size: $font-size-small;
 }
 
 img + em {
