--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,11 +15,11 @@ body {
 
 
 img {
-    //max-width: 100%;
+    max-width: 100%;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 60%;
+    //width: 80%; //60%
     align: center;
     //height: auto;
     //text-align: center;
