--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -20,7 +20,7 @@ img {
     margin-left: auto;
     margin-right: auto;
     //width: 80%; //60%
-    align: center;
+    align: left; // center
     //height: auto;
     //text-align: center;
 }
